--- a/github/workflows/ci-cd.yml
+++ b/github/workflows/ci-cd.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      - name: Grant execution permissions for Gradle
+        run: chmod +x ./gradlew
+
       - name: Run Lint
         run: ./gradlew lint
 
