--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,10 +1,7 @@
-name: CI/CD for Weather App
+name: Build and Deploy APK
 
 on:
   push:
-    branches:
-      - master
-  pull_request:
     branches:
       - master
 
@@ -13,29 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Check out code
+      # Checkout the code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Grant execution permissions for Gradle
-        run: chmod +x ./gradlew
-
-      - name: Run Lint
-        run: ./gradlew lint
-
-      - name: Run Unit Tests
-        run: ./gradlew test
-
-      - name: Build APK
-        run: ./gradlew assembleDebug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
+      # Set up Java
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          name: app-debug.apk
-          path: app/build/outputs/apk/debug/app-debug.apk
+          java-version: '17'
+
+      # Build APK
+      - name: Build APK
+        run: ./gradlew assembleRelease --warning-mode all
+
+      # Deploy APK to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: app/build/outputs/apk/release/
